--- a/templates/index.html
+++ b/templates/index.html
@@ -201,6 +201,7 @@ table thead, table tbody tr {
                     <div class="tab-content">
                         <div class="tab-pane fade in active" id="home">
                             <h4 style="padding-bottom:1em"></h4>
+                            <!-- <div id="colvis"></div> -->
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <thead>
                                     <tr>
@@ -261,6 +262,26 @@ table thead, table tbody tr {
         $('#dataTables-example').DataTable({
             responsive: true
         });
+        var table = $('#dataTables-example').DataTable();
+
+        $("#dataTables-example thead th").each( function ( i ) {
+      		var name = table.column( i ).header();
+      		var spanelt = document.createElement( "button" );
+      		spanelt.innerHTML = name.innerHTML;
+
+      		$(spanelt).addClass("colvistoggle");
+      		$(spanelt).attr("colidx",i);		// store the column idx on the button
+
+      		$(spanelt).on( 'click', function (e) {
+      			e.preventDefault();
+      			// Get the column API object
+      			var column = table.column( $(this).attr('colidx') );
+      			 // Toggle the visibility
+      			column.visible( ! column.visible() );
+      		});
+      		$("#colvis").append($(spanelt));
+      	});
+
     });
 
     $(function() {
