--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -36,13 +36,21 @@
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
                 <li>
-                    <a href="#"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                    <a href="#"><i class="fa fa-dashboard fa-fw"></i> Dashboards<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">
+                        <li>
+                            <a href="#"><i class="fa fa-book fa-fw"></i> Instructors</a>
+                        </li>
+                        <li>
+                          <a href="#"><i class="fa fa-graduation-cap fa-fw"></i> Classes</a>
+                        </li>
+                        <li>
+                          <a href="#"><i class="fa fa-filter fa-fw"></i> Yogis</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-upload fa-fw"></i> Upload CSV</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-filter fa-fw"></i> Yogi Funnel</a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-users fa-fw"></i> Run Promotions</a>
